Resource monitoring: update TC5.